# llm_doc_prep

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  progress.rs  util.rs
src/controllers/: embdding_ft_dataset_generator.rs  keyword_decorator.rs  mod.rs  splitter.rs  translator.rs
src/docs/: doc.rs  embedded_doc.rs  loader.rs  mod.rs  qdant.rs  saver.rs
src/inscriptions/: inscription.rs  loader.rs  mod.rs
src/llm/: embedding_model.rs  loader.rs  mod.rs  prompt.rs
